plugins {
    id 'java'
    // https://stackoverflow.com/a/75690526
    // Spark requires Spring boot 2.7 version
    id 'org.springframework.boot' version '2.7.14'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.odp'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.apache.spark:spark-sql_2.12:3.5.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

bootRun {
    // https://stackoverflow.com/a/69179997
    jvmArgs = ["--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"]
}

tasks.named('test') {
    useJUnitPlatform()
}
